--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'eclipse'
+apply plugin: 'pmd'
+apply plugin: 'jacoco'
+apply plugin: 'findbugs'
+
 
 repositories {
     mavenCentral()
@@ -9,5 +13,5 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
 }
-mainClassName = 'de.bussler.tictactoe.Main'
+mainClassName = 'de.bussler.tictactoe.fx.MainFx'
 
